Fixed text-align of menu

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -38,7 +38,7 @@ img.logo {
 }
 
 #random-form {width: 86px;margin: 0 auto;}
-#result { width: 100px; margin: 0 auto;}
+#result { text-align: center;}
 
 h3, h4, span, footer, p {
   font-family: "Trebuchet MS";
